--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
 .App {
-  text-align: center;
+    display: flex;
+    position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar-container {
+    flex: 0.25;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mobile-navbar {
+    display: none;
+    height: 3px;
+    width: 25px;
+    background: #333;
+    position: relative;
+    margin: 1rem;
+    margin-top: 3rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.mobile-navbar:before,
+.mobile-navbar:after {
+    content: '';
+    background: #333;
+    position: absolute;
+    bottom: 8px;
+    height: 3px;
+    width: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+.mobile-navbar:after {
+    bottom: 0;
+    top: 8px;
+    height: 3px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+    flex: 0.75;
+}
+
+@media screen and (max-width: 568px) {
+    .navbar-container {
+        display: none;
+    }
+
+    .mobile-navbar {
+        position: absolute;
+        display: block;
+        top: 0;
+        left: 0;
+        cursor: pointer;
+    }
 }
